--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 <body>
     <header>
         <nav>
-        <a lang="en" href="/"index.html="логотип сайта">
-            WebStudio
-        </a>
+            <a href="index.html">WebStudio</a>
         <ul>
             <li>
                 <a href="#">Студия</a>
@@ -43,19 +41,19 @@
 <!--h2 Наши качества-->
        <ul>
            <li>
-               <h3>Внимание к деталям</h2>
+               <h3>Внимание к деталям</h3>
                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
            <li>
-               <h2>Пунктуальность</h2>
+               <h3>Пунктуальность</h3>
                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
            <li>
-               <h2>Планирование</h2>
+               <h3>Планирование</h3>
                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
            <li>  
-            <h2>Современные технологии</h2>
+            <h3>Современные технологии</h3>
                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
        </ul> 
@@ -69,10 +67,10 @@
     </li>
    
     <li>
-<img src="/img/our-activities/img-2.jpg" alt="использует ноутбук"width="370" height="294">
+<img src="/img/our-activities/img-2.jpg" alt="использует ноутбук" width="370" height="294">
     </li>
     <li>
-        <img src="img/our-activities/img-3.jpg" alt="использует планшет"width="370" height="294">
+        <img src="img/our-activities/img-3.jpg" alt="использует планшет" width="370" height="294">
             </li>
 </ul>
     </section>
@@ -82,22 +80,22 @@
         <h2>Наша команда</h2>
     <ul>
         <li>
-            <img src="img/our-staff/img-1.jpg" alt="Игорь Демьяненко"width="270" height="260">
+            <img src="img/our-staff/img-1.jpg" alt="Игорь Демьяненко" width="270" height="260">
             <h3>Игорь Демьяненко</h3>
             <p lang="en">Product Designer</p>
         </li>
         <li>
-            <img src="img/our-staff/img-2.jpg" alt="Ольга Репина"width="270" height="260">
+            <img src="img/our-staff/img-2.jpg" alt="Ольга Репина" width="270" height="260">
             <h3>Ольга Репина</h3>
             <p lang="en">Frontend Developer</p>
         </li>
         <li>
-            <img src="img/our-staff/img-3.jpg" alt="Николай Тарасов"width="270" height="260">
+            <img src="img/our-staff/img-3.jpg" alt="Николай Тарасов" width="270" height="260">
             <h3>Николай Тарасов</h3>
             <p lang="en">Marketing</p>
         </li>
         <li>
-            <img src="img/our-staff/img-4.jpg" alt="Михаил Ермаков"width="270" height="260">
+            <img src="img/our-staff/img-4.jpg" alt="Михаил Ермаков" width="270" height="260">
             <h3>Михаил Ермаков</h3>
             <p lang="en">UI Designer</p>
         </li>
@@ -106,9 +104,7 @@
 </main>
 
 <footer>  
-        <a lang="en" href="/"index.html="логотип сайта">
-            WebStudio
-        </a>
+    <a href="index.html">WebStudio</a>
     <address>
         <ul>
            <li>
