--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
 <h2>Чем мы занимаемся</h2>
 <ul>
     <li>
-<img src="img/our-activities/img-1.jpg" alt="печатает на клавиатуре" width="370" height="294">
+<img src="images/our-activities/img-1.jpg" alt="печатает на клавиатуре" width="370" height="294">
     </li>
    
     <li>
-<img src="/img/our-activities/img-2.jpg" alt="использует ноутбук" width="370" height="294">
+<img src="/images/our-activities/img-2.jpg" alt="использует ноутбук" width="370" height="294">
     </li>
     <li>
-        <img src="img/our-activities/img-3.jpg" alt="использует планшет" width="370" height="294">
+        <img src="images/our-activities/img-3.jpg" alt="использует планшет" width="370" height="294">
             </li>
 </ul>
     </section>
@@ -80,22 +80,22 @@
         <h2>Наша команда</h2>
     <ul>
         <li>
-            <img src="img/our-staff/img-1.jpg" alt="Игорь Демьяненко" width="270" height="260">
+            <img src="images/our-staff/img-1.jpg" alt="Игорь Демьяненко" width="270" height="260">
             <h3>Игорь Демьяненко</h3>
             <p lang="en">Product Designer</p>
         </li>
         <li>
-            <img src="img/our-staff/img-2.jpg" alt="Ольга Репина" width="270" height="260">
+            <img src="images/our-staff/img-2.jpg" alt="Ольга Репина" width="270" height="260">
             <h3>Ольга Репина</h3>
             <p lang="en">Frontend Developer</p>
         </li>
         <li>
-            <img src="img/our-staff/img-3.jpg" alt="Николай Тарасов" width="270" height="260">
+            <img src="images/our-staff/img-3.jpg" alt="Николай Тарасов" width="270" height="260">
             <h3>Николай Тарасов</h3>
             <p lang="en">Marketing</p>
         </li>
         <li>
-            <img src="img/our-staff/img-4.jpg" alt="Михаил Ермаков" width="270" height="260">
+            <img src="images/our-staff/img-4.jpg" alt="Михаил Ермаков" width="270" height="260">
             <h3>Михаил Ермаков</h3>
             <p lang="en">UI Designer</p>
         </li>
